<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="14dp"
        android:text="@string/camera"
        android:textColor="@color/color_text02" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide" />

    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="14dp"
        android:text="@string/photo"
        android:textColor="@color/color_text02" />

    <TextView
        android:id="@+id/tv_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="14dp"
        android:text="@string/cancel"
        android:textColor="@color/color_text02" />


</LinearLayout>