<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.wdhhr.wswsvipnew.activity.SettingAboutMeActivity">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="18sp"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shap_radius_small_border"
        android:padding="10dp"
        android:text="@string/about_me_content"
        android:textSize="@dimen/font_sub_title"/>

    <TextView
        style="@style/title_soft"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="20dp"
        android:text="@string/copyright"/>

</LinearLayout>
